src/styles/typography.css
@import "./theme.css";

html {
  font-family: Arial, Helvetica, 'PingFang TC', 'Noto Sans CJK TC', 'Microsoft JhengHei', 'Heiti SC', 'Source Han Sans', 'WenQuanYi Micro Hei', 'SimHei', sans-serif;
  font-style: normal;
  font-weight: 400;
}

:root {
  --type-hero: 1.875rem; /* 30px */
  --type-section: 1.25rem; /* 20px */
  --type-item: 1.125rem; /* 18px */
  --type-body: 1rem; /* 16px */
  --type-quote: 0.9375rem; /* 15px */
  --type-meta: 0.875rem; /* 14px */
  --type-tag: 0.75rem; /* 12px */

  --font-weight-hero: 700;
  --font-weight-title: 600;
  --font-weight-subtitle: 500;

  --line-height-hero: 1.05;
  --line-height-section: 1.2;
  --line-height-item: 1.3;
  --line-height-subtitle: 1.45;
  --line-height-body: 1.6;
  --line-height-quote: 1.5;
  --line-height-meta: 1.2;
  --line-height-small-link: 1.4;
  --line-height-tag: 1;
}

@media screen and (min-width: 1024px) {
  :root {
    --type-hero: 2.25rem; /* 36px */
    --type-section: 1.5rem; /* 24px */
    --type-item: 1.125rem; /* 18px */
    --type-body: 1rem; /* 16px */
    --type-quote: 0.9375rem; /* 15px */
    --type-meta: 0.875rem; /* 14px */
    --type-tag: 0.75rem; /* 12px */
  }
}

.text-hero-title {
  font-size: var(--type-hero);
  font-weight: var(--font-weight-hero);
  line-height: var(--line-height-hero);
  color: var(--color-text-title);
}

.text-section-title {
  font-size: var(--type-section);
  font-weight: var(--font-weight-title);
  line-height: var(--line-height-section);
  color: var(--color-primary);
}

.text-item-title {
  font-size: var(--type-item);
  font-weight: var(--font-weight-title);
  line-height: var(--line-height-item);
  color: var(--color-text-title);
}

.text-item-subtitle {
  font-size: var(--type-body);
  font-weight: var(--font-weight-subtitle);
  line-height: var(--line-height-subtitle);
  color: var(--color-text-subtitle);
}

.text-body {
  font-size: var(--type-body);
  line-height: var(--line-height-body);
  color: var(--color-text-title);
}

.text-quote {
  font-size: var(--type-quote);
  font-style: italic;
  line-height: var(--line-height-quote);
  color: var(--color-text-title);
}

.text-meta {
  font-size: var(--type-meta);
  line-height: var(--line-height-meta);
  color: var(--color-text-meta); /* Need more subtle than subtle */
}

.text-small-link {
  font-size: var(--type-meta);
  line-height: var(--line-height-small-link);
  color: var(--color-primary);
  text-decoration: none;
}

.text-badge {
  font-size: var(--type-tag);
  line-height: var(--line-height-tag);
  color: var(--color-primary);
  text-decoration: none;
}

.text-call-to-action {
  font-size: var(--type-meta);
  font-weight: var(--font-weight-subtitle);
  line-height: var(--line-height-item);
}

/* Reset h1-h6 styles */
h1,
h2,
h3,
h4,
h5,
h6 {
  padding: 0;
  margin: 0;
  line-height: inherit;
  font-size: inherit;
  font-weight: inherit;
}

a {
  color: var(--color-body);
  text-decoration: none;
}

a:hover {
  text-decoration: underline;
}

.truncated {
  text-wrap: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
}

